[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iwb_ros"
version = "0.0.0"
authors = [
    { name="Blackbird", email="jicong.ao@tum.de" },
]
description = "IWB python package for milling machine simulation"
readme = "README.md"
license = { file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://gitlab.lrz.de/00000000014A6C01/sa_py_pkg"
"Bug Tracker" = "https://gitlab.lrz.de/00000000014A6C01/sa_py_pkg/-/issues"
# [tool.setuptools.packages]
# find = {}